--- a/packages/rocketchat-ui/client/views/app/room.html
+++ b/packages/rocketchat-ui/client/views/app/room.html
@@ -132,7 +132,9 @@
 											</li>
 										{{/if}}
 									{{/if}}
-									{{#each messagesHistory}}{{#nrr nrrargs 'message' .}}{{/nrr}}{{/each}}
+									{{#each messagesHistory}}
+										{{#nrr nrrargs 'message' .}}{{/nrr}}
+									{{/each}}
 									{{#if hasMoreNext}}
 										<li class="load-more">
 											{{#if isLoading}}
