Fix - conflicting template names

--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -1,4 +1,4 @@
-<template name="createChannel">
+<template name="sendSMS">
 	<section class="create-channel">
 		{{#each roomType in roomTypesBeforeStandard}}
 			<div class="room-type-creation">
