--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -130,7 +130,7 @@
 						</div>
 					</div>
 					{{#if tokensRequired}}
-						{{> tokenpass extensionsConfig}}
+						<!-- {{> tokenpass extensionsConfig}} -->
 					{{/if}}
 				{{/if}}
 				<div class="create-channel__inputs">
@@ -144,82 +144,4 @@
 			</div>
 		{{/each}}
 	</section>
-</template>
-
-<template name="tokenpass">
-	<fieldset class="rc-form-fieldset {{#if invalid}}rc-form-fieldset--error{{/if}}">
-		<legend class="rc-form-legend">Tokenpass</legend>
-
-		<div class="create-channel__switches">
-			<div class="rc-switch">
-				<label class="rc-switch__label" tabindex="-1">
-					<input type="checkbox" class="rc-switch__input" name="tokenRequireAll" value="all" checked>
-					<span class="rc-switch__button">
-						<span class="rc-switch__button-inside"></span>
-					</span>
-					<span class="rc-switch__text">
-						{{tokenRequiment}}
-					</span>
-				</label>
-				<span class="rc-switch__description">{{tokenRequimentDescription}}</span>
-			</div>
-		</div>
-
-		<div class="rc-input {{#if invalidTokens}}rc-input--error{{/if}}">
-			<label class="rc-input__label">
-				<div class="rc-input__title">{{_ "Tokens_Required"}}</div>
-				<div class="rc-input__wrapper">
-					<input name="tokensRequired" type="text" class="rc-input__element" placeholder="{{_ "Tokens_Required_Input_Placeholder"}}">
-				</div>
-			</label>
-			<div class="rc-input__description">{{_ "Tokens_Required_Input_Description"}}</div>
-		</div>
-		<div class="rc-input">
-			<label class="rc-input__label">
-				<div class="rc-input__title">{{_ "Tokens_Minimum_Needed_Balance"}}</div>
-				<div class="rc-input__wrapper">
-					<input name="tokenMinimumNeededBalance" type="number" class="rc-input__element" placeholder="{{_ "Tokens_Minimum_Needed_Balance_Placeholder"}}" min="0">
-				</div>
-			</label>
-			<div class="rc-input__description">{{_ "Tokens_Minimum_Needed_Balance_Description"}}</div>
-		</div>
-		{{#if selectedTokens}}
-			<div class="rc-input">
-				<label class="rc-input__label">
-					<div class="rc-input__title">Tokens</div>
-					<div class="rc-input__wrapper">
-						<div class="rc-tags rc-tags--no-icon">
-							{{#each token in selectedTokens}}
-								{{> tagToken token}}
-							{{/each}}
-						</div>
-					</div>
-				</label>
-			</div>
-		{{/if}}
-
-		<input class="rc-button rc-button--primary rc-button--full" type="submit" data-button="add" {{addIsDisabled}} value="{{_ "Add"}}">
-
-	</fieldset>
-</template>
-
-<template name='tag'>
-	<span class="rc-tags__tag">
-		{{#if username}}
-			<span class="rc-tags__tag-image">
-				{{> avatar username=username}}
-			</span>
-			<span class="rc-tags__tag-text">{{username}}</span>
-		{{else}}
-			<span class="rc-tags__tag-text">{{text}}</span>
-		{{/if}}
-		{{> icon block="rc-tags__tag-icon" icon="cross"}}
-	</span>
-</template>
-
-<template name='tagToken'>
-	<span class="rc-tags__tag">
-		<span class="rc-tags__tag-text rc-tooltip" aria-label="balance: {{balance}}">{{token}}</span>
-		{{> icon block="rc-tags__tag-icon" icon="cross"}}
-	</span>
 </template>
