--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -1,73 +1,17 @@
 <template name="sendSMS">
-	<section class="create-channel">
+	<section class="send-sms">
 		{{#each roomType in roomTypesBeforeStandard}}
 			<div class="room-type-creation">
 				{{> Template.dynamic template=roomType.creationTemplate }}
 			</div>
 		{{/each}}
-		<div class="create-channel__wrapper">
-			<header class="create-channel__header">
-				<h1 class="create-channel__title">{{_ "Send_sms_with_mobex"}}</h1>
-				<p class="create-channel__description">{{_ "Channels_are_where_your_team_communicate"}}</p>
+		<div class="send-sms__wrapper">
+			<header class="send-sms__header">
+				<h1 class="send-sms__title">{{_ "Send_sms_with_mobex"}}</h1>
+				<p class="send-sms__description">{{_ "Send_sms_with_mobex_description"}}</p>
 			</header>
-			<form class="create-channel__content">
-				<div class="create-channel__switches">
-					<div class="rc-switch">
-						<label class="rc-switch__label" tabindex="-1">
-							<input type="checkbox" class="rc-switch__input" name="type" value="p" checked={{roomTypeIsP}} disabled="{{cantCreateBothTypes}}">
-							<span class="rc-switch__button">
-								<span class="rc-switch__button-inside"></span>
-							</span>
-							<span class="rc-switch__text">
-								{{typeLabel}}
-							</span>
-						</label>
-						<span class="rc-switch__description">{{typeDescription}}</span>
-					</div>
-					<div class="rc-switch">
-						<label class="rc-switch__label">
-							<input type="checkbox" class="rc-switch__input" name="readOnly" checked={{readOnly}} disabled="{{broadcast}}">
-							<span class="rc-switch__button">
-							<span class="rc-switch__button-inside"></span>
-						</span>
-							<span class="rc-switch__text">
-								{{_ "Read_only_channel"}}
-							</span>
-						</label>
-						<span class="rc-switch__description">{{readOnlyDescription}}</span>
-					</div>
-					{{#if e2eEnabled}}
-						<div class="rc-switch">
-							<label class="rc-switch__label">
-								<input type="checkbox" class="rc-switch__input" name="encrypted" checked={{encrypted}} disabled="{{encryptedDisabled}}">
-								<span class="rc-switch__button">
-								<span class="rc-switch__button-inside"></span>
-							</span>
-								<span class="rc-switch__text">
-									{{_"Encrypted"}}
-								</span>
-							</label>
-							<span class="rc-switch__description">
-								{{_"Encrypted_channel_Description"}}
-							</span>
-						</div>
-					{{/if}}
-					<div class="rc-switch">
-						<label class="rc-switch__label">
-							<input type="checkbox" class="rc-switch__input" name="broadcast">
-							<span class="rc-switch__button">
-							<span class="rc-switch__button-inside"></span>
-						</span>
-							<span class="rc-switch__text">
-								{{_"Broadcast_channel"}}
-							</span>
-						</label>
-						<span class="rc-switch__description">
-							{{_"Broadcast_channel_Description"}}
-						</span>
-					</div>
-				</div>
-				<div class="create-channel__inputs">
+			<form class="send-sms__content">
+				<div class="send-sms__inputs">
 					<div class="rc-input {{#if invalidChannel}}rc-input--error{{/if}}">
 						<label class="rc-input__label">
 							<div class="rc-input__title">{{_ "Channel_name"}}</div>
@@ -116,7 +60,7 @@
 					</div>
 				</div>
 				{{#if tokenAccessEnabled}}
-					<div class="create-channel__switches">
+					<div class="send-sms__switches">
 						<div class="rc-switch">
 							<label class="rc-switch__label" tabindex="-1">
 								<input type="checkbox" class="rc-switch__input" name="setTokensRequired" {{tokenIsDisabled}}>
@@ -133,7 +77,7 @@
 						<!-- {{> tokenpass extensionsConfig}} -->
 					{{/if}}
 				{{/if}}
-				<div class="create-channel__inputs">
+				<div class="send-sms__inputs">
 					<input class="rc-button rc-button--primary" type='submit' data-button="create" {{createIsDisabled}} value="{{_ "Create"}}" />
 				</div>
 			</form>
