--- a/packages/rocketchat_theme/client/main.css
+++ b/packages/rocketchat_theme/client/main.css
@@ -54,6 +54,7 @@
 @import 'imports/components/modal/full-modal.css';
 @import 'imports/components/modal/create-channel.css';
 @import 'imports/components/modal/directory.css';
+@import 'imports/components/modal/send-sms.css';
 
 /* User Info */
 @import 'imports/components/userInfo.css';
