Change css class name [ci skip]

--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -1,9 +1,9 @@
 <template name="sendSMS">
-	<section class="send-sms">
+	<section class="send-sms-container">
 		{{> header sectionName="Send SMS with Mobex" hideHelp=true fullpage=true}}
 		<div class="rc-table-content">
 
-			
+
 		</div>
 	</section>
 </template>
