--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -24,6 +24,24 @@
 					{{/if}}
 				</div>
 
+				<div class="rc-select">
+					<select class="input-monitor rc-select__element" name="{{_id}}" {{isDisabled}} {{isReadonly}}>
+						{{#each languages}}
+						<option value="{{key}}" selected="{{isAppLanguage key}}" dir="auto">{{name}}</option>
+						{{/each}}
+					</select>
+					{{> icon block="rc-select__arrow" icon="arrow-down" }}
+				</div>
+
+				<!-- <div class="rc-select">
+					<select class="input-monitor rc-select__element" name="{{_id}}" {{isDisabled}} {{isReadonly}}>
+						{{#each values}}
+							<option value="{{key}}" selected="{{selectedOption ../_id key}}">{{_ i18nLabel}}</option>
+						{{/each}}
+					</select>
+					{{> icon block="rc-select__arrow" icon="arrow-down" }}
+				</div> -->
+
 		</div>
 	</section>
 </template>
