Added csv upload accept types [ci skip]

--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -52,7 +52,7 @@
 							<div class="preview no-file background-transparent-light secondary-font-color"><i class="icon-upload"></i></div>
 							<div class="action">
 								<div class="rc-button rc-button--primary">{{_ 'Select_file'}}
-									<input type="file" accept="{{assetAccept fileConstraints}}" />
+									<input type="file" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" />
 								</div>
 							</div>
 						</div>
