--- a/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
+++ b/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
@@ -17,6 +17,53 @@
 	&-topic {
 		color: var(--rc-color-primary-light);
 	}
+
+	& .settings-file-preview {
+		display: flex;
+		align-items: center;
+
+		& input[type=file] {
+			position: absolute !important;
+			z-index: 10000;
+			top: 0;
+			left: 0;
+
+			width: 100%;
+			height: 100%;
+
+			cursor: pointer;
+
+			opacity: 0;
+
+			& * {
+				cursor: pointer;
+			}
+		}
+
+		& .preview {
+			overflow: hidden;
+
+			width: 100px;
+			height: 40px;
+
+			margin-right: 0.75rem;
+
+			border-width: var(--input-border-width);
+			border-color: var(--input-border-color);
+			border-radius: var(--input-border-radius);
+
+			background-repeat: no-repeat;
+			background-position: center center;
+			background-size: contain;
+
+			&.no-file {
+				display: flex;
+
+				align-items: center;
+				justify-content: center;
+			}
+		}
+	}
 }
 
 .send-sms-icon {
