Added csv upload css [ci skip]

--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -48,7 +48,7 @@
 				<div class="rc-input">
 					<label class="rc-input__label">
 						<div class="rc-input__title">{{_ "Send_sms_with_mobex_to_number_csv"}}</div>
-						<div class="settings-file-preview">
+						<div class="send-sms-file-preview">
 							<div class="preview no-file background-transparent-light secondary-font-color"><i class="icon-upload"></i></div>
 							<div class="action">
 								<div class="rc-button rc-button--primary">{{_ 'Select_file'}}
