--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -4,8 +4,6 @@
 		<div class="rc-table-content">
 
 
-
-
 				<div class="rc-input">
 					<label class="rc-input__label">
 						<div class="rc-input__title">{{_ "Send_sms_with_mobex_from"}}</div>
@@ -48,11 +46,13 @@
 				<div class="rc-input">
 					<label class="rc-input__label">
 						<div class="rc-input__title">{{_ "Send_sms_with_mobex_to_number_csv"}}</div>
-						<div class="send-sms-file-preview">
-							<div class="preview no-file background-transparent-light secondary-font-color"><i class="icon-upload"></i></div>
-							<div class="action">
-								<div class="rc-button rc-button--primary">{{_ 'Select_file'}}
-									<input type="file" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" />
+						<div class="rc-input__wrapper">
+							<div class="send-sms-file-preview">
+								<div class="preview no-file background-transparent-light secondary-font-color"><i class="icon-upload"></i></div>
+								<div class="action">
+									<div class="rc-button rc-button--primary">{{_ 'Select_file'}}
+										<input type="file" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" />
+									</div>
 								</div>
 							</div>
 						</div>
