--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -70,7 +70,11 @@
 					<div class="rc-input__description">{{_ "Send_sms_with_mobex_text_description"}}</div>
 				</div>
 
-				<input class="rc-button rc-button--primary rc-button--full" type="submit" data-button="add" {{addIsDisabled}} value="{{_ "Send"}}">
+				<div class="rc-input">
+						<div class="rc-input__wrapper">
+							<input class="rc-button rc-button--primary rc-button--full" type="submit" value="{{_ "Send"}}">
+						</div>
+				</div>
 
 				<!-- <div class="rc-select">
 					<select class="input-monitor rc-select__element" name="{{_id}}" {{isDisabled}} {{isReadonly}}>
