Debugging added [ci skip]

--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -72,7 +72,7 @@
 
 				<div class="rc-input">
 						<div class="rc-input__wrapper">
-							<input class="rc-button rc-button--primary rc-button--full" type="submit" value="{{_ "Send"}}">
+							<input class="rc-button rc-button--primary rc-button--full" type="submit" data-button="create"  value="{{_ "Send"}}">
 						</div>
 				</div>
 
