css changes for sendSMS button [ci skip]

--- a/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
+++ b/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
@@ -21,6 +21,11 @@
 	& .rc-input {
 		margin-bottom: 2.5rem;
 	}
+
+	& .rc-input input[type="submit"] {
+		background: var(--button-primary-background);
+		color: var(--button-primary-text-color);
+	}
 }
 
 .send-sms-file-preview {
