Added char counter and made the padding fixed [ci skip]

--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -67,7 +67,7 @@
 							<textarea class="input-monitor rc-input__element" name="smsText" rows="4" style="height: auto" {{isDisabled}} {{isReadonly}}>{{value}}</textarea>
 						</div>
 					</label>
-					<div class="rc-input__description">{{_ "Send_sms_with_mobex_text_description"}}</div>
+					<div class="rc-input__description">Current count: {{ smsLength }}. {{_ "Send_sms_with_mobex_text_description"}}</div>
 				</div>
 
 				<div class="rc-input">
