Changed Jasmin to Mobex, added batch option [ci skip]

--- a/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
+++ b/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
@@ -26,6 +26,10 @@
 		background: var(--button-primary-background);
 		color: var(--button-primary-text-color);
 	}
+
+	& header .rc-header .rc-header--fullpage {
+		padding-left: 0;
+	}
 }
 
 .send-sms-file-preview {
