Fixed auth header to batch sms send config [ci skip]

--- a/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
+++ b/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
@@ -27,7 +27,7 @@
 		color: var(--button-primary-text-color);
 	}
 
-	& header .rc-header .rc-header--fullpage {
+	& .rc-header--fullpage {
 		padding-left: 0 !important;
 	}
 }
