--- a/packages/rocketchat-ui/client/views/app/sendSMS.html
+++ b/packages/rocketchat-ui/client/views/app/sendSMS.html
@@ -57,7 +57,7 @@
 							</div>
 						</div>
 					</label>
-					<div class="rc-input__description">{{ uploadedFileName }} {{_ "Send_sms_with_mobex_to_number_csv_description"}}</div>
+					<div class="rc-input__description"><b>{{ uploadedFileName }}</b> {{_ "Send_sms_with_mobex_to_number_csv_description"}}</div>
 				</div>
 
 				<div class="rc-input">
