--- a/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
+++ b/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
@@ -4,7 +4,7 @@
 
 	height: 100vh;
 
-	padding: 0 10rem;
+	padding: 0 5rem;
 
 	&-search {
 		width: 100%;
@@ -130,5 +130,11 @@
 		& td:not(:first-child) {
 			display: none;
 		}
+	}
+}
+
+@media (width <= 1280px) {
+	.send-sms-container{
+		padding: 0 2rem;
 	}
 }
