Adjusted input bottom margins in send sms page

--- a/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
+++ b/packages/rocketchat_theme/client/imports/components/modal/send-sms.css
@@ -140,3 +140,11 @@
 		padding: 0 2rem;
 	}
 }
+
+@media (height <= 720px) {
+	.send-sms-container {
+		& .rc-input {
+			margin-bottom: 1rem;
+		}
+	}
+}
