Receiving SMS to a private group channel

--- a/packages/rocketchat-livechat/client/views/app/livechatDepartmentForm.html
+++ b/packages/rocketchat-livechat/client/views/app/livechatDepartmentForm.html
@@ -18,6 +18,12 @@
 							</div>
 						</div>
 						<div class="input-line">
+							<label>{{_ "SMS Number"}}</label>
+							<div>
+								<input type="tel" class="rc-input__element" name="phone" value="{{department.phone}}" placeholder="{{_ "Phone number to receive or send SMS"}}" />
+							</div>
+						</div>
+						<div class="input-line">
 							<label>{{_ "Description"}}</label>
 							<div>
 								<textarea name="description" class="rc-input__element" rows="6">{{department.description}}</textarea>
