Mobex credentials configuration for organizations

--- a/packages/rocketchat-livechat/client/views/app/livechatDepartmentForm.html
+++ b/packages/rocketchat-livechat/client/views/app/livechatDepartmentForm.html
@@ -24,6 +24,18 @@
 							</div>
 						</div>
 						<div class="input-line">
+							<label>{{_ "Mobex SMS Username"}}</label>
+							<div>
+								<input type="text" class="rc-input__element" name="mobexUsername" value="{{department.mobexUsername}}" placeholder="{{_ "Mobex SMS Username"}}" />
+							</div>
+						</div>
+						<div class="input-line">
+							<label>{{_ "Mobex SMS Password"}}</label>
+							<div>
+								<input type="password" class="rc-input__element" name="mobexPassword" value="{{department.mobexPassword}}" placeholder="{{_ "Mobex SMS Password"}}" />
+							</div>
+						</div>
+						<div class="input-line">
 							<label>{{_ "Description"}}</label>
 							<div>
 								<textarea name="description" class="rc-input__element" rows="6">{{department.description}}</textarea>
