--- a/app/livechat/client/views/app/livechatDepartmentForm.html
+++ b/app/livechat/client/views/app/livechatDepartmentForm.html
@@ -18,6 +18,24 @@
 							</div>
 						</div>
 						<div class="input-line">
+							<label>{{_ "SMS Number"}}</label>
+							<div>
+								<input type="tel" class="rc-input__element" name="phone" value="{{department.phone}}" placeholder="{{_ "Phone number to receive or send SMS"}}" />
+							</div>
+						</div>
+						<div class="input-line">
+							<label>{{_ "Mobex SMS Username"}}</label>
+							<div>
+								<input type="text" class="rc-input__element" name="mobexUsername" value="{{department.mobexUsername}}" placeholder="{{_ "Mobex SMS Username"}}" />
+							</div>
+						</div>
+						<div class="input-line">
+							<label>{{_ "Mobex SMS Password"}}</label>
+							<div>
+								<input type="password" class="rc-input__element" name="mobexPassword" value="{{department.mobexPassword}}" placeholder="{{_ "Mobex SMS Password"}}" />
+							</div>
+						</div>
+						<div class="input-line">
 							<label>{{_ "Description"}}</label>
 							<div>
 								<textarea name="description" class="rc-input__element" rows="6">{{department.description}}</textarea>
@@ -28,19 +46,6 @@
 							<div>
 								<label><input type="radio" name="showOnRegistration" value="1" checked="{{showOnRegistration true}}" /> {{_ "Yes"}}</label>
 								<label><input type="radio" name="showOnRegistration" value="0" checked="{{showOnRegistration false}}" /> {{_ "No"}}</label>
-							</div>
-						</div>
-						<div class="input-line">
-							<label>{{_ "Email"}}</label>
-							<div>
-								<input type="email" class="rc-input__element" name="email" value="{{department.email}}" placeholder="{{_ "Email"}}" />
-							</div>
-						</div>
-						<div class="input-line">
-							<label>{{_ "Show_on_offline_page"}}</label>
-							<div>
-								<label><input type="radio" name="showOnOfflineForm" value="1" checked="{{showOnOfflineForm true}}" /> {{_ "Yes"}}</label>
-								<label><input type="radio" name="showOnOfflineForm" value="0" checked="{{showOnOfflineForm false}}" /> {{_ "No"}}</label>
 							</div>
 						</div>
 						<hr />
