Fixed bugs on department creations

--- a/app/livechat/client/views/app/livechatDepartmentForm.html
+++ b/app/livechat/client/views/app/livechatDepartmentForm.html
@@ -42,6 +42,12 @@
 							</div>
 						</div>
 						<div class="input-line">
+							<label>{{_ "Email"}}</label>
+							<div>
+								<input type="email" class="rc-input__element" name="email" value="{{department.email}}" placeholder="{{_ "Email"}}" />
+							</div>
+						</div>
+						<div class="input-line">
 							<label>{{_ "Show_on_registration_page"}}</label>
 							<div>
 								<label><input type="radio" name="showOnRegistration" value="1" checked="{{showOnRegistration true}}" /> {{_ "Yes"}}</label>
