FIX - All the livechat and department bugs

--- a/app/livechat/client/views/app/livechatDepartmentForm.html
+++ b/app/livechat/client/views/app/livechatDepartmentForm.html
@@ -164,7 +164,7 @@
 									<fieldset>
 										<legend>{{_ "Selected_agents"}}</legend>
 
-										<div class="rc-table-content">
+										<div class="rc-table-content" style="height: auto">
 											{{#table fixed='true'}}
 												<thead>
 													<tr>
