ADD - Batch SMS by queue & make SMS, MMS buttons reflect the sending state

--- a/app/ui/client/views/app/sendSMS.html
+++ b/app/ui/client/views/app/sendSMS.html
@@ -92,7 +92,7 @@
 
 				<div class="rc-input">
 					<div class="rc-input__wrapper">
-						<input class="rc-button rc-button--primary rc-button--full" type="submit" style="display: inline" data-button="create"  value="{{_ "Send SMS"}}">
+						<input id="sms-send-button" class="rc-button rc-button--primary rc-button--full" type="submit" style="display: inline" data-button="create"  value="{{_ "Send SMS"}}">
 						<input id="mms-send-button" class="rc-button rc-button--primary rc-button--full"
 							type="button" style="background-color: #1d74f5; color: white; display: inline" data-button="create"  value="{{_ "Send MMS"}}">
 					</div>
